Fixed z-index of mobile menu. Fixed few links in navbar.

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@
     box-sizing: border-box;
 }
 
+html  {
+	scroll-behavior: smooth;
+}
+
 body {
     background: #621402;
     font-family: "Roboto", sans-serif;
@@ -342,7 +346,7 @@ option {
         padding: 20px;
         margin-left: 20px;
         background-color: #621402;
-        z-index: 9;
+        z-index: 8;
         border-radius: 10px;
         opacity: 0;
         transform: translateY(20%);
@@ -361,6 +365,7 @@ option {
         height: 40px;
         margin-left: 10px;
         cursor: pointer;
+	    z-index: 9;
     }
 
     .is-open {
